# agda-build

./: agda-build.cabal  default.nix  shell.nix
src/: Main.hs
test-lib/: test-lib.agda-lib
test-lib/_build/doc/html/: Test.html
test-lib/src/: Test.agda  Test.agdai
