name:                agda-build
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/phile314/agda-build
license:             BSD3
license-file:        LICENSE
author:              Philipp Hausmann
maintainer:          ph_git@314.ch
copyright:           2017 Philipp Hausmann
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable agda-build
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Agda
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , mtl
                     , optparse-applicative
                     , text
  default-language:    Haskell2010
  default-extensions:  MultiWayIf
  other-modules:       Agda.Build.Build
                     , Agda.Build.Files
                     , Agda.Build.Options

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Agda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phile314/agda-build
